    - Fonts include doxygen comments.
    - Amended return type of some font properties (Lakedaemon).
    - Reorganised PSD and BMP files.
    - Prevented demo build process from unnecessarily including BMP files.
    - Fixed divide by 0 when content size is 0 in SliderVertical and
      SliderHorizontal::resizeGrip().
    - SDL fixes.
  
  - New Features:
    - Built with devKitARM r31/libnds 1.4.5/default ARM7 0.5.14.
    - Setting MultiLineTextBox's max rows to -1 forces it to retain all text.
    - Added getCharTop() to font classes.
    - Various minor .NET tool improvements.
    - Added Gadget::checkCollision(Rect&).
    - Added drawBaselineText() to Graphics and GraphicsPort classes
     (Lakedaemon).
    - Added freetype outline font class (Lakedaemon).
    - Added Install.bat install script for Windows users.

  V0.99.3 (20100819)
  
  - Fixes:
    - WoopsiString::compareTo() no longer inlined (fixes SF bug 3017420).
    - Moved unused FixedWidthFontBase class into extras directory.
    - Moved putSDLPixel() and getSDLPixel() into FrameBuffer class from
      woopsifuncs files.
    - Added copy() to all bitmap classes.
    - Replaced call to woopsiDmaCopy() in Graphics::copy() with call to copy()
      method of bitmap class.
    - Graphics::drawEllipse() automatically calls drawCircle() if both radii are
      equal.
    - Graphics::drawFilledEllipse() automatically calls drawFilledCircle() if
      both radii are the same.
    - Graphics::drawCircle() and drawFilledCircle() are protected.
    - Graphics::drawLine() automatically calls drawVertLine() or drawHorizLine()
      if lines can be optimised.
    - Graphics::drawVertLine() and drawHorizLine() are protected.
    - Removed GraphicsPort::drawCircle(), drawFilledCircle(), drawHorizLine()
      and drawVertLine().
    - Fixed TinyFont (broken in last release).
    - Moved woopsiRGB() macro from woopsifuncs.h to graphics.h.
    - Moved woopsiDmaFill() and woopsiDmaCopy() into new dmafuncs files.